# Spring_Internship_2026

./: .gitignore  EDA.docx  LICENSE  NOTICE  README.md  file_structure.md  noisy_dataset(gender).ipynb  pyproject.toml  univariate_EDA.html  univariate_EDA.ipynb
config/: noise_generation.toml
data/: description.md
data/interim/: ILPD_cleaned.csv
data/processed/: ILPD_clinically_capped.csv  ILPD_robust_scaled_features.csv  ILPD_robust_scaled_with_gmm_noise.csv
legacy_notebooks/: 03_modeling_and_paper_notes.ipynb  04_02_models_syn_org.ipynb  04_XGboost_train.ipynb  05_XGboost_train.ipynb
output/: best_literature_recreation_cleaned_ilpd.pkl  gmm_noise_extension_results_ilpd.csv  literature_recreation_cleaned_ilpd.csv
produced_reports/: 01_eda_univariate_bivariate.html  02_outlier_handling.html  03_preprocessing_pipeline.html  04_noise_generation_gmm.html  05_literature_recreation_cleaned_ilpd.html  05_model_building_pipeline_rawdata.html  06_gmm_noise_extension_cleaned_ilpd.html  eda_univariate_bivariate.html  outlier_handling.html  preprocessing_pipeline.html
scripts/: 01_eda_univariate_bivariate.ipynb  02_outlier_handling.ipynb  03_preprocessing_pipeline.ipynb  04_noise_generation_gmm.ipynb  05_literature_recreation_cleaned_ilpd.ipynb  05_old_model_building_pipeline.ipynb  06_gmm_noise_extension_cleaned_ilpd.ipynb  07_mixed_final_models.ipynb  eda_univariate_bivariate.ipynb  final_models.ipynb  models_org.ipynb  models_syn_win.ipynb  outlier_handling.ipynb  preprocessing_pipeline copy.ipynb  preprocessing_pipeline.ipynb  workflow.md
(+3 files in other folders)
